# machine-learning-template-repo

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  pyproject.toml.basic  pyproject.toml.gpu  pyproject.toml.minimal  pyproject.toml.poetry  setup.cfg  setup.py
.claude/: CLAUDE.md
.claude/skills/lambda-labs/: SKILL.md
.claude/skills/makefile/: SKILL.md
.claude/skills/notebooks/: SKILL.md
.claude/skills/setup-ml-repo/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer.gpu/: Dockerfile  devcontainer.json  post-create.sh
.devcontainer.minimal/: devcontainer.json  post-create.sh  post-start.sh
.devcontainer.poetry/: devcontainer.json  post-create.sh  post-start.sh
config/: example.yaml
config/experiment/: my_experiment.yaml
docker/: Dockerfile  Dockerfile.conda  Dockerfile.python  environment.yaml
examples/sat-change/: Makefile
examples/sat-change/scripts/gcp/: sync_data.sh
examples/sat-change/scripts/lambda/: get_instance_ip.sh  list_instances.sh  setup_gcp.sh  setup_instance.sh  setup_remote.sh  terminate_instance.sh  train_and_shutdown.sh  train_multi.sh
notebooks/: 00-xy-example-notebook.ipynb  01-xy-example-notebook.ipynb
scripts/: slurm.sh
